# Imporve_SeamCarving

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Color.h  Makefile  SeamCarving  SeamCarving.cpp  SeamCarving.h  cmake_install.cmake  globalwarp.cpp  globalwarp.h  lsd.cpp  main.cpp
data/: source.txt
glad/include/glad/: glad.h
glad/src/: glad.c
